# libelfman

./: .gitmodules  CMakeLists.txt  README.md  exceptions.h  memory_helpers.cpp  memory_helpers.h  object_file.cpp  object_file.h  raw_section.h  rel.cpp  rel.h  relocation_section.h  section.cpp  section.h  static_library.cpp  static_library.h  symbol.cpp  symbol.h  symbol_section.h
tests/: getobj.cpp  insert.cpp  insertobj.cpp  makeglobal.cpp  moverel.cpp  rebuildar.cpp  rebuildobj.cpp  renamesym.cpp  searchsym.cpp
